# liana-py

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  MOFAcell.ipynb  README.md  alignment_using_landmarks.ipynb  basic_usage.ipynb  correlations.ipynb  correlations_clean.ipynb  estimate_metalinks.ipynb  example_runs.ipynb  misty_tests.ipynb  multiview.ipynb  prova_inter_scseqcomm.py  pyproject.toml  requirements.txt  rework_objects.ipynb  rewrite_misty.ipynb  setup.py  sma_analyze.ipynb  sma_pre.ipynb  sma_spatialdata.ipynb  space_F.ipynb  spatialDM_reimplement.ipynb  start.ipynb  synthetic_test.ipynb  targeted .ipynb  targeted.ipynb  test_misty.ipynb  test_scseqcomm.ipynb  test_spatialdm.ipynb  tetra.ipynb
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml
docs/: omnipath_resources.ipynb
docs/source/: api.rst  conf.py  contributing.rst  index.rst  installation.rst  reference.rst  release_notes.rst  requirements.txt
liana/: __init__.py  _constants.py  _docs.py  _logging.py  logging.py
liana/_constants/: _docs.py
liana/_resource/: select_resource.py
liana/docs/: resources.ipynb
liana/funcomics/: __init__.py  causalnet.py  generate_lr_geneset.py  mdata_to_anndata.py  obsm_to_adata.py  transform.py
liana/method/: Method.py  _Method.py  __init__.py  _global_lr_pipe.py  _liana_pipe.py  liana_pipe.py
liana/multi/: __init__.py  _common.py  _getters.py  _nmf.py  dea_to_lr.py  df_to_lr.py  to_mudata.py  to_tensor_c2c.py
liana/plotting/: __init__.py  _circle_plot.py  _common.py  _connectivity_plot.py  _dotplot.py  _misty_plots.py  _proximity_plot.py  _setplot.py  _tileplot.py
liana/resource/: MR_ai_cgno.csv  PD_hmdb_recon_cut.csv  PD_processed.csv  PD_t.csv  TF_TG_db.csv  __init__.py  _neo4j_controller.py  _orthology.py  _reassemble_complexes.py  _resource_utils.py  _select_resource.py  get_metalinks.py  omni_resource.csv  select_resource.py  utils.py
liana/scores/: __init__.py  _permutations.py
liana/steady/: Method.py  __init__.py  _permutations.py  aggregate.py  get_mean_perms.py  liana_pipe.py
liana/testing/: __init__.py  _sample_anndata.py  (+8 more)
tests/: start.ipynb
(+156 files in other folders)
